Completed skincare structure & CSS. Also fixed lightbox images, img paths and szes

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <div class="d-flex align-items-center navbar-brand">
-                    <a class="" href="#">
+                    <a class="" href="index.html">
                         <img src="assets/images/logo.png" alt="PSNY Logo" class="img-fluid">
                     </a>
                     <span class="font-futura color-primary text-uppercase d-none d-md-block">
@@ -38,27 +38,24 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" aria-current="page" href="#">About us</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" aria-current="page" href="team.html">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">Surgical</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="surgical.html">Surgical</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">Non-Surgical</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="non-surgical.html">Non-Surgical</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">cONTACT</a>
+                            <a class="active nav-link font-futura color-primary text-uppercase" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Dropdown 
                             </a>
                             <ul class="dropdown-menu level-one" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="philosophy.html">philosophy</a></li>
+                                <li><a class="dropdown-item" href="skincare.html">Skincare</a></li>
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                             </ul>
@@ -126,69 +123,69 @@
         <div class="container">
             <div class="row wow animated fadeInUp">
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/item01.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/item01.jpg" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/item01.jpg" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
-                    </a>
-                </div>
-            </div>
-            <div class="row wow animated fadeInUp">
-                <div class="col-md-4">
-                    <a href="/assets/images/gallery/item02.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/item02.jpg" alt="gallery item" class="img-fluid example-image">
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="/assets/images/gallery/item03.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/item03.jpg" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
             </div>
             <div class="row wow animated fadeInUp">
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/item02.jpg" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/item04.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/item04.jpg" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/item05.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/item05.jpg" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/item03.jpg" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
             </div>
             <div class="row wow animated fadeInUp">
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/item06.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/item06.jpg" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.pn" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/item07.jpg" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/item07.jpg" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.pn" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/item04.jpg" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="/assets/images/gallery/placeholder.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="/assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.pn" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/item05.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+            </div>
+            <div class="row wow animated fadeInUp">
+                <div class="col-md-4">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.pn" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/item06.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/item07.jpg" alt="gallery item" class="img-fluid example-image">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://dummyimage.com/750x400/000000/dedede.pn" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
+                        <img src="assets/images/gallery/placeholder.png" alt="gallery item" class="img-fluid example-image">
                     </a>
                 </div>
             </div>
