--- a/philosophy.html
+++ b/philosophy.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <div class="d-flex align-items-center navbar-brand">
-                    <a class="" href="#">
+                    <a class="" href="index.html">
                         <img src="assets/images/logo.png" alt="PSNY Logo" class="img-fluid">
                     </a>
                     <span class="font-futura color-primary text-uppercase d-none d-md-block">
@@ -36,27 +36,24 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" aria-current="page" href="#">About us</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" aria-current="page" href="team.html">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">Surgical</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="surgical.html">Surgical</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">Non-Surgical</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="non-surgical.html">Non-Surgical</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">cONTACT</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Dropdown 
                             </a>
                             <ul class="dropdown-menu level-one" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="philosophy.html">philosophy</a></li>
+                                <li><a class="dropdown-item" href="skincare.html">Skincare</a></li>
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                             </ul>
