Validated html files and did some fixes on images

--- a/skincare.html
+++ b/skincare.html
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="assets/images/skincare/skincare.png" alt="Skincare" srcset="" class="img-fluid wow animated fadeInUp">
+                    <img src="assets/images/skincare/skincare.png" alt="Skincare" class="img-fluid wow animated fadeInUp">
                 </div>
             </div>
 
@@ -156,7 +156,7 @@
                 <div class="col-12">
                     <div class="before-after__slider">
                         <h3>Before and after</h3>
-                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div id="beforeAfterControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
                                 <img src="assets/images/skincare/sliderPlaceholder.png" class="d-block w-100 img-fluid" alt="slider image">
@@ -187,7 +187,7 @@
                 <div class="col-12">
                     <div class="videos__slider">
                         <h3>Videos</h3>
-                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div id="videosControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
                                 <img src="assets/images/skincare/sliderPlaceholder.png" class="d-block w-100 img-fluid" alt="slider image">
