Created Face Page and did CSS, changed header

--- a/skincare.html
+++ b/skincare.html
@@ -38,28 +38,30 @@
                         <li class="nav-item">
                             <a class="nav-link font-futura color-primary text-uppercase" aria-current="page" href="team.html">About us</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="surgical.html">Surgical</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Surgical 
+                            </a>
+                            <ul class="dropdown-menu level-one" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="face.html">Face</a></li>
+                            </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="non-surgical.html">Non-Surgical</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Non-Surgical 
+                            </a>
+                            <ul class="dropdown-menu level-one" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="skincare.html">Skincare</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link font-futura color-primary text-uppercase" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-futura color-primary text-uppercase" href="#">cONTACT</a>
+                            <a class="nav-link font-futura color-primary text-uppercase" href="philosophy.html">Our Philosophy</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown 
-                            </a>
-                            <ul class="dropdown-menu level-one" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="philosophy.html">philosophy</a></li>
-                                <li><a class="dropdown-item" href="skincare.html">Skincare</a></li>
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link font-futura color-primary text-uppercase" href="#">cONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +110,7 @@
     </section>
     <!-- Banner Ends -->
 
-    <!-- Team Starts -->
+    <!-- Skincare Starts -->
     <section class="skincare">
         <div class="container">
             <div class="row align-items-center">
@@ -274,7 +276,7 @@
             </div>
         </div>
     </section>
-    <!-- Team Ends -->
+    <!-- Skincare Ends -->
 
     <!-- Contact Form Starts -->
     <section class="contact-form">
