--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
                             <a class="nav-link font-futura color-primary text-uppercase" aria-current="page" href="team.html">About us</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Surgical 
                             </a>
-                            <ul class="dropdown-menu level-one" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu level-one">
                                 <li><a class="dropdown-item" href="face.html">Face</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Non-Surgical 
                             </a>
-                            <ul class="dropdown-menu level-one" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu level-one">
                                 <li><a class="dropdown-item" href="skincare.html">Skincare</a></li>
                             </ul>
                         </li>
