Male Breast structure & css

--- a/futNfue.html
+++ b/futNfue.html
@@ -45,6 +45,7 @@
                             <ul class="dropdown-menu level-one">
                                 <li><a class="dropdown-item" href="face.html">Face</a></li>
                                 <li><a class="dropdown-item" href="breast.html">Breast</a></li>
+                                <li><a class="dropdown-item" href="maleBreast.html">Male Breast</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -111,7 +112,7 @@
     </section>
     <!-- Banner Ends -->
 
-    <!-- Skincare Starts -->
+    <!-- Fut & Fue Starts -->
     <section class="futNfue">
         <div class="container">
             <div class="row align-items-center">
@@ -137,7 +138,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="assets/images/skincare/skincare.png" alt="Skincare" class="img-fluid wow animated fadeInUp">
+                    <img src="assets/images/skincare/skincare.png" alt="Fut & Fue" class="img-fluid wow animated fadeInUp">
                 </div>
             </div>
 
@@ -277,7 +278,7 @@
             </div>
         </div>
     </section>
-    <!-- Skincare Ends -->
+    <!-- Fut & Fue Ends -->
 
     <!-- Contact Form Starts -->
     <section class="contact-form" id="contact">
