--- a/maleBreast.html
+++ b/maleBreast.html
@@ -8,8 +8,6 @@
 
     <!-- Animate CSS -->
     <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
-    <!-- Lightbox CSS -->
-    <link rel="stylesheet" href="assets/vendors/lightbox/lightbox.min.css">
     <!-- Boostrap -->
     <link rel="stylesheet" href="assets/vendors/bootstrap/bootstrap.min.css">
     <!-- Main Stylesheet -->
@@ -79,7 +77,7 @@
     <!-- Header Ends -->
 
     <!-- Banner Starts -->
-    <section class="banner__subpage breast-banner">
+    <section class="banner__subpage maleBreast-banner">
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
@@ -104,9 +102,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="banner__inner">
-                        <span class="animated wow fadeIn">Surgical</span>
+                        <span class="animated wow fadeIn">Breast</span>
                         <h2 class="animated wow fadeIn">
-                            Breast
+                            Male Breast
+                            <br>
+                            (Gynecomastia)
                         </h2>
                     </div>
                 </div>
@@ -115,66 +115,154 @@
     </section>
     <!-- Banner Ends -->
 
-    <!-- Face Starts -->
-    <section class="breast">
+    <!-- Male Breast Starts -->
+    <section class="male-breast">
         <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="male-breast__inner">
+                        <h3 class="wow animated fadeInUp">Nam uismod libero</h3>
+                        <p class="wow animated fadeInUp">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+                        </p>
+                        <p class="wow animated fadeInUp">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+                        </p>
+                        <div>
+                            <h3 class="wow animated fadeInUp">Advanrages</h3>
+                            <ul class="wow animated fadeInUp">
+                                <li>Lorem Ipsum is simply dummy text of the printing</li>
+                                <li>Lorem Ipsum is simply dummy text</li>
+                                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+                                <li>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</li>
+                                <li>It has survived not only five centuries</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="assets/images/maleBreast/maleBreast.png" alt="Male Breast" class="img-fluid wow animated fadeInUp img-bordered">
+                </div>
+            </div>
+
             <div class="row">
-                <div class="col-12">
-                    <div class="face__inner">
-                        <h2>Enhance your beauty</h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                <div class="col-md-11">
+                    <div class="testimonial">
+                        <p class="wow animated fadeInUp">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text <strong>ever since the 1500s</strong>, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                         </p>
-                        <p>
-                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                        </p>
-                        <p>
-                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        </p>
+                        <h4 class="wow animated fadeInUp">SUSIE HOWELL</h4>
+                        <span class="wow animated fadeInUp">
+                            Lorem ipsum dolor sit amet
+                        </span>
                     </div>
                 </div>
             </div>
-            <div class="row breast__gallery justify-content-center">
-                <div class="col-md-4 wow fadeInUp animated">
-                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/breast/item1.jpg" alt="breast gallery item" class="img-fluid example-image">
-                    </a>
-                    <span>Breast Rejuvenation</span>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="before-after__slider">
+                        <h3>Before and after</h3>
+                        <div id="beforeAfterControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="assets/images/skincare/sliderPlaceholder.png" class="d-block w-100 img-fluid" alt="slider image">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/images/skincare/sliderPlaceholder.png" class="d-block w-100 img-fluid" alt="slider image">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/images/skincare/sliderPlaceholder.png" class="d-block w-100 img-fluid" alt="slider image">
+                              </div>
+                            </div>
+                            <div class="slider__handlers">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4 wow fadeInUp animated">
-                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/breast/item2.jpg" alt="breast gallery item" class="img-fluid example-image">
-                    </a>
-                    <span>Breast Augmentation</span>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="videos__slider">
+                        <h3>Videos</h3>
+                        <div id="videosControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="assets/images/skincare/sliderPlaceholder.png" class="d-block w-100 img-fluid" alt="slider image">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/images/skincare/sliderPlaceholder.png" class="d-block w-100 img-fluid" alt="slider image">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/images/skincare/sliderPlaceholder.png" class="d-block w-100 img-fluid" alt="slider image">
+                              </div>
+                            </div>
+                            <div class="slider__handlers">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4 wow fadeInUp animated">
-                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/breast/item3.jpg" alt="breast gallery item" class="img-fluid example-image">
-                    </a>
-                    <span>Breast Reduction</span>
-                </div>
-                <div class="col-md-4 wow fadeInUp animated">
-                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/breast/item4.jpg" alt="breast gallery item" class="img-fluid example-image">
-                    </a>
-                    <span>Breast Lift</span>
-                </div>
-                <div class="col-md-4 wow fadeInUp animated">
-                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/breast/item5.jpg" alt="breast gallery item" class="img-fluid example-image">
-                    </a>
-                    <span>Breast Reconstruction</span>
-                </div>
-                <div class="col-md-4 wow fadeInUp animated">
-                    <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/breast/item6.jpg" alt="breast gallery item" class="img-fluid example-image">
-                    </a>
-                    <span>Male Breast (Gynecomastia)</span>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="QnA">
+                        <h2>Questions and answers</h2>
+                        <ul>
+                            <li>
+                                What is Lorem Ipsum?
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                </p>
+                            </li>
+                            <li>
+                                Why do we use it?
+                                <p>
+                                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. 
+                                </p>
+                            </li>
+                            <li>
+                                Where does it come from?
+                                <p>
+                                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. 
+                                </p>
+                            </li>
+                            <li>
+                                Where can I get some?
+                                <p>
+                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                                </p>
+                            </li>
+                            <li>
+                                Lorem ipsum dolor sit amet?
+                                <p>
+                                    Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid.
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Face Ends -->
+    <!--  Male Breast Ends -->
 
     <!-- Contact Form Starts -->
     <section class="contact-form" id="contact">
@@ -350,11 +438,10 @@
     </footer>
     <!-- Footer Ends -->
 
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
-    <!-- Lightbox JS -->
-    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
-    <script src="assets/vendors/lightbox/lightbox-plus-jquery.min.js"></script>
     <!-- Main Script -->
     <script src="assets/js/app.js"></script>
 </body>
