--- a/team.html
+++ b/team.html
@@ -45,6 +45,7 @@
                             <ul class="dropdown-menu level-one">
                                 <li><a class="dropdown-item" href="face.html">Face</a></li>
                                 <li><a class="dropdown-item" href="breast.html">Breast</a></li>
+                                <li><a class="dropdown-item" href="maleBreast.html">Male Breast</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
